Fixed overflow in gallery

--- a/assets/style.css
+++ b/assets/style.css
@@ -62,7 +62,7 @@
 		flex-direction: column;
 	}
 	.gallery * {
-		height: 100%;
+		/* height: 100%; */
 	}
 	.gallery-half {
 		margin-top: 0.5rem;
@@ -138,7 +138,7 @@
 		font-size: 1.25rem;
 	}
 	.article-body {
-		max-width: 60vw;
+		max-width: 75svw;
 	}
 	.article-row {
 		display: flex;
@@ -159,13 +159,9 @@
 		padding: 0;
 	}
 	/* Galleries */
-	.gallery-wrapper {
-		width: 90vw;
-	}
 	.gallery,
 	.gallery-half {
 		flex-direction: row;
-		/* gap: 0.5rem; */
 	}
 	.gallery-half {
 		gap: 0.5rem;
@@ -173,8 +169,8 @@
 		flex-direction: column;
 	}
 	.gallery .gallery-item {
-		height: auto;
-		width: 70%;
+		/* height: auto; */
+		/* width: 100%; */
 	}
 	/* Images */
 	.img-half {
@@ -221,9 +217,6 @@
 		line-height: 2rem;
 	}
 	/* Galleries */
-	.gallery-wrapper {
-		height: 90vw;
-	}
 	.gallery,
 	.gallery-half {
 		gap: 0.5rem;
@@ -290,9 +283,6 @@
 		font-size: 1.3rem;
 	}
 	/* Galleries */
-	.gallery-wrapper {
-		width: 90vw;
-	}
 	.gallery,
 	.gallery-half {
 		flex-direction: row;
@@ -356,6 +346,10 @@ a:hover:not(.nav-link, .nav-brand) {
 }
 :is(ul, ol):not(.nav-links) li::before {
 	content: "- ";
+}
+.gallery,
+.gallery-half {
+	text-align: center;
 }
 .hint {
 	font-style: italic;
@@ -437,34 +431,22 @@ h4 {
 	list-style: none;
 	padding: 0;
 }
-.gallery-wrapper {
-	display: flex;
-	text-align: center;
-	flex-direction: column;
-	justify-content: center;
-	height: calc(100vh - 10rem);
-	width: 90vw;
-}
-.gallery {
-	height: inherit;
-}
 .gallery,
 .gallery-half {
 	display: flex;
 	flex-grow: 0;
 	flex-shrink: 1;
-}
-:is(.gallery-item-wrapper, .gallery-half .gallery-item) {
+	gap: 0.5rem;
 	width: 100%;
 }
-.gallery-item-wrapper {
-	text-align: center;
+.gallery {
+	height: 90%;
+}
+.gallery-item {
+	width: 100%;
+	height: auto;
 	object-fit: contain;
 }
-.gallery-half .gallery-item {
-	height: auto;
-}
-
 .img-inline {
 	width: 0.7rem;
 }
@@ -506,6 +488,9 @@ blockquote p::before {
 .flex-row {
 	display: flex;
 	flex-direction: row !important;
+}
+.w-100 {
+	width: 100% !important;
 }
 .quote {
 	margin-bottom: 1rem;
